<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/detail_background"
    tools:context=".DetailActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:src="@drawable/intkhab_passportsize"
        android:elevation="8dp"
        app:civ_border_width="4dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="96dp"
        app:civ_border_color="@color/colorPrimary"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_username"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profile_pic"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_email"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_username"/>

    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/demo_detail"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_email"/>

</RelativeLayout>