<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/full_background"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name">

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:ems="15"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="8dp"
        android:drawablePadding="8dp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:ems="15"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:drawablePadding="8dp"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/et_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_border"
        android:drawableLeft="@drawable/ic_comment_black_24dp"
        android:drawableStart="@drawable/ic_comment_black_24dp"
        android:ems="15"
        android:hint="@string/description"
        android:inputType="textLongMessage"
        android:padding="8dp"
        android:textColorHint="@android:color/white"
        android:drawablePadding="8dp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_detail"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:onClick="openDetail"
        android:text="@string/next" />

</RelativeLayout>